# star_watch

./: LICENSE  README.md  main.py  pyproject.toml
migrations/versions/: 0296633ff362_added_default_for_release_status_to_be_.py  18733c5c32e1_added_type_column_in_card_table_for_.py  1d593978da7e_.py  22dafe9d2000_added_column_for_user_alerts_aka_.py  369172df25f0_.py  38d935d15ef1_revision_on_release_status.py  5983bb4dfef4_added_release_information_column.py  63ee43ef8ecd_added_date_edited_column.py  6d1e819041b3_updating_mode_column.py  7d4751726c49_updating_alert_column.py  7f655919ae04_adding_lots_of_new_columns.py  81eb05d2affb_.py  84522cbd5de1_attempting_to_merge.py  9cd8d33775a6_added_default_for_release_status_to_be_.py  a2c2a3432096_added_default_for_release_status_to_be_.py  a7b40b772a1a_adding_release_status_column_in_card_.py  c4eed9e917e9_added_column_to_remember_light_mode_or_.py  c6361d5b9171_added_default_for_release_status_to_be_.py  ca176bba9e85_re_adding_release_status_column_in_card_.py  ce19da3199a0_edited_type_column.py  d472c520c4ad_added_column_for_user_alerts_aka_.py  dfca85c76d66_.py  e4a5abfff3d7_.py  fafd37fac947_.py  ff4dafa4610f_initial_migration.py
star_watch/: models.py  routes.py
star_watch/static/: dark-theme.css  dark.css  light-theme.css  light.css  media.css  package-lock.json  package.json  script.js  style.css  system-theme.css
star_watch/templates/: account.html  base.html  completed.html  edit.html  favorites.html  index.html  login.html  logout.html  paused.html  planning.html  releases.html  search.html  settings.html  (+2 more)
(+6 files in other folders)
