[tool.poetry]
name = "star-watch"
version = "0.1.0"
description = "star watch is a personal web application for tracking media"
authors = ["Shannon Reid <shannon.victoria.reid@gmail.com>"]
readme = "README.md"
packages = [{include = "star_watch"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-session = "^0.4.0"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
